# Gruppen-Academy

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PENDENCIAS.md  SECURITY_BACKLOG.md  alembic.ini  claude.md  docker-compose.yml  entrypoint.sh  plan.md  pyproject.toml
.github/workflows/: security.yml
alembic/: env.py
alembic/versions/: 001_add_corporate_guidelines.py  002_add_domain_to_guidelines.py  003_add_system_settings.py  004_add_sso_fields_to_users.py  005_add_teams_journey_mode.py  006_add_activity_completions.py  007_add_audit_logs.py  008_ocr_batch_import.py  009_add_page_codes.py  010_add_trainings.py  011_add_module_allow_download_and_preview.py  012_training_final_quiz.py  013_learning_path_items_and_badges.py  014_learning_path_teams.py  015_add_certificates.py  016_cert_logo_height.py
app/: config.py  database.py  init_db.py  main.py  redis.py
app/audit/: middleware.py  models.py  service.py
app/auth/: blacklist.py  dependencies.py  generate_keys.py  router.py  schemas.py  service.py  sso.py
app/catalog/: models.py  router.py  schemas.py  service.py
app/certificates/: models.py  router.py  schemas.py  service.py
app/copilot/: router.py  schemas.py
app/evaluations/: models.py  router.py  schemas.py  service.py
app/gamification/: models.py  router.py  schemas.py  service.py
app/journeys/: models.py  pdf.py  qr_utils.py  router.py  schemas.py  service.py
app/learning/: models.py  router.py  schemas.py  service.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
nginx/: academy.conf
(+68 files in other folders)
